开始制作学成在线

--- a/code/float-常见网页布局.html
+++ b/code/float-常见网页布局.html
@@ -14,17 +14,17 @@
             list-style: none;
         }
         .top {
-            height: 50px;
+            height: 150px;
             background-color: rgba(0, 255, 255, 0.623);
         }
         .banner {
-            height: 150px;
+            height: 250px;
             width: 980px;
             margin: 10px auto;
             background-color: red;
         }
         .box {
-            height: 300px;
+            height: 400px;
             width: 980px;
             margin:10px auto;
             background-color: pink;
@@ -32,9 +32,17 @@
         .box li {
             float: left;
             width: 237px;
-            height: 300px;
+            height: 400px;
             background-color: grey;
-            margin-left: 10px;
+            margin-right: 10px;
+        }
+        .box .last {
+            margin-right: 0;
+        }
+        .footer {
+            height: 145px;
+            margin-top: 10px;
+            background-color: green;
         }
     </style>
     </head>
@@ -46,7 +54,7 @@
                 <li>1</li>
                 <li>2</li>
                 <li>3</li>
-                <li class="">4</li>
+                <li class="last">4</li>
             </ul>
         </div>
         <div class="footer"></div>
