--- a/code/compre-学成在线/compre-学成在线.html
+++ b/code/compre-学成在线/compre-学成在线.html
@@ -21,5 +21,39 @@
         </div>
         <div class="user">user.avatar:user.id</div>
     </div>
+    <div class="banner">
+        <div class="w">
+            <div class="subnav">
+                <ul>
+                    <li><a href="#">初级前端工程师<span>&gt;</span></a></li>
+                    <li><a href="#">中级前端工程师<span>&gt;</span></a></li>
+                    <li><a href="#">高级前端工程师<span>&gt;</span></a></li>
+                    <li><a href="#">初级前端技术专家<span>&gt;</span></a></li>
+                    <li><a href="#">中级前端技术专家<span>&gt;</span></a></li>
+                    <li><a href="#">高级前端技术专家<span>&gt;</span></a></li>
+                    <li><a href="#">初级前端研究员<span>&gt;</span></a></li>
+                    <li><a href="#">中级前端研究员<span>&gt;</span></a></li>
+                    <li><a href="#">高级前端研究员<span>&gt;</span></a></li>
+                </ul>
+            </div>
+            <div class="course">
+                <h2>我的课程表</h2>
+                <div class="bd">
+                    <ul>
+                        <li><a href="#">
+                            <h3>继续学习 高等数学</h3></a>
+                            <p>正在学习-中值定理</p></li>
+                        <li><a href="#">
+                            <h3>继续学习 离散数学</h3></a>
+                            <p>正在学习-谓词逻辑</p></li>
+                        <li><a href="#">
+                            <h3>继续学习 概率论</h3></a>
+                            <p>正在学习-贝叶斯定理</p></li>
+                    </ul>
+                    <div class="more"><a href="#">全部课程</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
