--- a/code/compre-学成在线/compre-学成在线.html
+++ b/code/compre-学成在线/compre-学成在线.html
@@ -1,59 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学成在线</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="header w">
-        <div class="logo">logo</div>
-        <div class="nav"><ul>
-            <li><a href="#">首页</a></li>
-            <li><a href="#">课程</a></li>
-            <li><a href="#">职业规划</a></li>
-        </ul></div>
-        <div class="search">
-            <input type="text" placeholder="请输入...">
-            <button></button>
-        </div>
-        <div class="user">user.avatar:user.id</div>
-    </div>
-    <div class="banner">
-        <div class="w">
-            <div class="subnav">
-                <ul>
-                    <li><a href="#">初级前端工程师<span>&gt;</span></a></li>
-                    <li><a href="#">中级前端工程师<span>&gt;</span></a></li>
-                    <li><a href="#">高级前端工程师<span>&gt;</span></a></li>
-                    <li><a href="#">初级前端技术专家<span>&gt;</span></a></li>
-                    <li><a href="#">中级前端技术专家<span>&gt;</span></a></li>
-                    <li><a href="#">高级前端技术专家<span>&gt;</span></a></li>
-                    <li><a href="#">初级前端研究员<span>&gt;</span></a></li>
-                    <li><a href="#">中级前端研究员<span>&gt;</span></a></li>
-                    <li><a href="#">高级前端研究员<span>&gt;</span></a></li>
-                </ul>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>517在线</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="header w">
+            <div class="logo">室友去哪了</div>
+            <div class="nav"><ul>
+                    <li><a href="#">首页</a></li>
+                    <li><a href="#">课程</a></li>
+                    <li><a href="#">懒狗规划</a></li>
+                </ul></div>
+            <div class="search">
+                <input type="text" placeholder="请输入...">
+                <button></button>
             </div>
-            <div class="course">
-                <h2>我的课程表</h2>
-                <div class="bd">
+            <div class="user">申请退出学籍</div>
+        </div>
+        <div class="banner">
+            <div class="w">
+                <div class="subnav">
                     <ul>
-                        <li><a href="#">
-                            <h3>继续学习 高等数学</h3></a>
-                            <p>正在学习-中值定理</p></li>
-                        <li><a href="#">
-                            <h3>继续学习 离散数学</h3></a>
-                            <p>正在学习-谓词逻辑</p></li>
-                        <li><a href="#">
-                            <h3>继续学习 概率论</h3></a>
-                            <p>正在学习-贝叶斯定理</p></li>
+                        <li><a href="#">初级前端工程师<span>&gt;</span></a></li>
+                        <li><a href="#">中级前端工程师<span>&gt;</span></a></li>
+                        <li><a href="#">高级前端工程师<span>&gt;</span></a></li>
+                        <li><a href="#">初级前端技术专家<span>&gt;</span></a></li>
+                        <li><a href="#">中级前端技术专家<span>&gt;</span></a></li>
+                        <li><a href="#">高级前端技术专家<span>&gt;</span></a></li>
+                        <li><a href="#">初级前端研究员<span>&gt;</span></a></li>
+                        <li><a href="#">中级前端研究员<span>&gt;</span></a></li>
+                        <li><a href="#">高级前端研究员<span>&gt;</span></a></li>
                     </ul>
-                    <div class="more"><a href="#">全部课程</a>
+                </div>
+                <div class="course">
+                    <h2>它的课程表</h2>
+                    <div class="bd">
+                        <ul>
+                            <li><a href="#">
+                                    <h3>继续学习 高等数学</h3></a>
+                                <p>正在学习-中值定理</p></li>
+                            <li><a href="#">
+                                    <h3>继续学习 离散数学</h3></a>
+                                <p>正在学习-谓词逻辑</p></li>
+                            <li><a href="#">
+                                    <h3>继续学习 概率论</h3></a>
+                                <p>正在学习-贝叶斯定理</p></li>
+                        </ul>
+                        <div class="more"><a href="#">全部课程</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-</html>
+        <div class="good w">
+            <h3>主播推荐</h3>
+            <ul class="goods">
+                <li><a href="#">张 宇</a></li>
+                <li><a href="#">卢本伟</a></li>
+                <li><a href="#">大司马</a></li>
+                <li><a href="#">汤 帅</a></li>
+            </ul>
+            <a class="mod" href="#">修改性别</a>
+        </div>
+
+    </html>
