更新了精品推荐

--- a/code/compre-学成在线/compre-学成在线.html
+++ b/code/compre-学成在线/compre-学成在线.html
@@ -63,8 +63,30 @@
                 <li><a href="#">卢本伟</a></li>
                 <li><a href="#">大司马</a></li>
                 <li><a href="#">汤 帅</a></li>
+                <li><a href="#">永乐大帝</a></li>
+                <li><a href="#">JAVA李老师</a></li>
             </ul>
             <a class="mod" href="#">修改性别</a>
+        </div>
+        <div class="box w">
+            <div class="box-hd">
+                <h3>精品推荐</h3>
+                <a>查看全部</a>
+            </div>
+            <div class="box-bd">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
