--- a/code/compre-学成在线/compre-学成在线.html
+++ b/code/compre-学成在线/compre-学成在线.html
@@ -71,7 +71,7 @@
         <div class="box w">
             <div class="box-hd">
                 <h3>精品推荐</h3>
-                <a>查看全部</a>
+                <a href="#">查看全部</a>
             </div>
             <div class="box-bd">
                 <ul>
