--- a/code/compre-学成在线/compre-学成在线.html
+++ b/code/compre-学成在线/compre-学成在线.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="header w">
-            <div class="logo">室友去哪了</div>
+            <div class="logo">室友去哪了?</div>
             <div class="nav"><ul>
                     <li><a href="#">首页</a></li>
                     <li><a href="#">课程</a></li>
@@ -19,7 +19,7 @@
                 <input type="text" placeholder="请输入...">
                 <button></button>
             </div>
-            <div class="user">申请退出学籍</div>
+            <div class="user">好的寝室没有围墙</div>
         </div>
         <div class="banner">
             <div class="w">
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="good w">
-            <h3>主播推荐</h3>
+            <h3>室友推荐</h3>
             <ul class="goods">
                 <li><a href="#">张 宇</a></li>
                 <li><a href="#">卢本伟</a></li>
@@ -73,19 +73,83 @@
                 <h3>精品推荐</h3>
                 <a href="#">查看全部</a>
             </div>
-            <div class="box-bd">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+        </div>
+        <div class="box-bd w clearfix">
+            <ul>
+                <li><a href="#">
+                    <img src="images/math-book0.jpg" />
+                    <h4>3天低等数学速成班，摸鱼无烦恼</h4>
+                    <div class="info"><span>初级</span> · 3人正在学习</div>
+                </a>
+                </li>
+                <li><a href="#"></a><img src="images/math-book1.jpg" />
+                    <h4>5天低等数学冲刺班，挂科无烦恼</h4>
+                    <div class="info"><span>初级</span> · 1人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/yuwen0.png" />
+                    <h4>如何阴阳怪气室友，remake经验分享</h4>
+                    <div class="info"><span>中级</span> · 15人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/yuwen1.jpg" />
+                    <h4>毛🐏先生的说话之道，了解施乐公司</h4>
+                    <div class="info"><span>高级</span> · 112人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/yuwen2.jpg" />
+                    <h4>10天教你成为李平老师口中的人渣</h4>
+                    <div class="info"><span>中级</span> · 30人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/dili0.jpg" />
+                    <h4>合工大=复旦？浅谈地理位置对大学发展的影响</h4>
+                    <div class="info"><span>高级</span> · 55人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/math-book2.jpg" />
+                    <h4>☀两年高等数学突破班，马力加强版</h4>
+                    <div class="info"><span>中级</span> ·73人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/english0.jpg" />
+                    <h4>Mou moumou雅思1.0经验分享，附赠学习规划</h4>
+                    <div class="info"><span>初级</span> · 0人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/wuli0.jpg" />
+                    <h4>疫情不给出校门？教你利用物理规律翻墙</h4>
+                    <div class="info"><span>高级</span> · 3458人正在学习</div></a>
+                </li><a href="#"></a><li><img src="images/shengwu0.jpg" />
+                    <h4>垃圾的产生过程及处理方法，现场教学班</h4>
+                    <div class="info"><span>初级</span> · 37人正在学习</div></a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer" >
+            <div class="w">
+                <div class="copyright">
+                    <img src="images/logo.png" alt="logo">
+                    <p>©2021 Baidu<br/>  
+                        (京)-经营性-2017-0020 京公网安备11000002000001号 京ICP证030173号</p>
+                    <a href="#">下载APP</a>
+                </div>
+                <div class="links">
+                    <div class="col">
+                        <span>关于本网站</span>
+                        <ul>
+                            <a target="_blank" href="//www.bilibili.com/blackboard/aboutUs.html">关于我们</a>
+                            <a target="_blank" href="//www.bilibili.com/blackboard/contact.html">联系我们</a>
+                            <a target="_blank" href="//www.bilibili.com/blackboard/join.html">加入我们</a>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <span>用户指南</span>
+                        <ul>
+                            <a target="_blank" href="https://www.bilibili.com/protocal/licence.html">用户协议</a>
+                            <a target="_blank" href="//www.bilibili.com/v/copyright/intro/">
+                                侵权申诉
+                              </a>
+                              <a target="_blank" href="https://www.bilibili.com/blackboard/privacy-pc.html">隐私政策</a>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <span>合作伙伴</span>
+                        <ul>
+                            <a target="_blank" href="//www.bilibili.com/blackboard/friends-links.html">友情链接</a>
+                            <a target="_blank" href="//www.bilibili.com/blackboard/activity-S1jfy69Jz.html">
+                                名人堂
+                              </a>
+                              <a target="_blank" href="//e.bilibili.com/">广告合作</a>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
