增加了rank标签

--- a/code/compre-学成在线/compre-学成在线.html
+++ b/code/compre-学成在线/compre-学成在线.html
@@ -1,156 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>517在线</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="header w">
-            <div class="logo">室友去哪了?</div>
-            <div class="nav"><ul>
-                    <li><a href="#">首页</a></li>
-                    <li><a href="#">课程</a></li>
-                    <li><a href="#">懒狗规划</a></li>
-                </ul></div>
-            <div class="search">
-                <input type="text" placeholder="请输入...">
-                <button></button>
-            </div>
-            <div class="user">好的寝室没有围墙</div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>517在线</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="header w">
+        <div class="logo">室友去哪了?</div>
+        <div class="nav">
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">课程</a></li>
+                <li><a href="#">懒狗规划</a></li>
+            </ul>
         </div>
-        <div class="banner">
-            <div class="w">
-                <div class="subnav">
+        <div class="search">
+            <input type="text" placeholder="请输入...">
+            <button></button>
+        </div>
+        <div class="user">好的寝室没有围墙</div>
+    </div>
+    <div class="banner">
+        <div class="w">
+            <div class="subnav">
+                <ul>
+                    <li><a href="#">初级前端工程师<span>&gt;</span></a></li>
+                    <li><a href="#">中级前端工程师<span>&gt;</span></a></li>
+                    <li><a href="#">高级前端工程师<span>&gt;</span></a></li>
+                    <li><a href="#">初级前端技术专家<span>&gt;</span></a></li>
+                    <li><a href="#">中级前端技术专家<span>&gt;</span></a></li>
+                    <li><a href="#">高级前端技术专家<span>&gt;</span></a></li>
+                    <li><a href="#">初级前端研究员<span>&gt;</span></a></li>
+                    <li><a href="#">中级前端研究员<span>&gt;</span></a></li>
+                    <li><a href="#">高级前端研究员<span>&gt;</span></a></li>
+                </ul>
+            </div>
+            <div class="course">
+                <h2>它的课程表</h2>
+                <div class="bd">
                     <ul>
-                        <li><a href="#">初级前端工程师<span>&gt;</span></a></li>
-                        <li><a href="#">中级前端工程师<span>&gt;</span></a></li>
-                        <li><a href="#">高级前端工程师<span>&gt;</span></a></li>
-                        <li><a href="#">初级前端技术专家<span>&gt;</span></a></li>
-                        <li><a href="#">中级前端技术专家<span>&gt;</span></a></li>
-                        <li><a href="#">高级前端技术专家<span>&gt;</span></a></li>
-                        <li><a href="#">初级前端研究员<span>&gt;</span></a></li>
-                        <li><a href="#">中级前端研究员<span>&gt;</span></a></li>
-                        <li><a href="#">高级前端研究员<span>&gt;</span></a></li>
+                        <li><a href="#">
+                                <h3>继续学习 高等数学</h3>
+                            </a>
+                            <p>正在学习-中值定理</p>
+                        </li>
+                        <li><a href="#">
+                                <h3>继续学习 离散数学</h3>
+                            </a>
+                            <p>正在学习-谓词逻辑</p>
+                        </li>
+                        <li><a href="#">
+                                <h3>继续学习 概率论</h3>
+                            </a>
+                            <p>正在学习-贝叶斯定理</p>
+                        </li>
                     </ul>
-                </div>
-                <div class="course">
-                    <h2>它的课程表</h2>
-                    <div class="bd">
-                        <ul>
-                            <li><a href="#">
-                                    <h3>继续学习 高等数学</h3></a>
-                                <p>正在学习-中值定理</p></li>
-                            <li><a href="#">
-                                    <h3>继续学习 离散数学</h3></a>
-                                <p>正在学习-谓词逻辑</p></li>
-                            <li><a href="#">
-                                    <h3>继续学习 概率论</h3></a>
-                                <p>正在学习-贝叶斯定理</p></li>
-                        </ul>
-                        <div class="more"><a href="#">全部课程</a>
-                        </div>
+                    <div class="more"><a href="#">全部课程</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="good w">
-            <h3>室友推荐</h3>
-            <ul class="goods">
-                <li><a href="#">张 宇</a></li>
-                <li><a href="#">卢本伟</a></li>
-                <li><a href="#">大司马</a></li>
-                <li><a href="#">汤 帅</a></li>
-                <li><a href="#">永乐大帝</a></li>
-                <li><a href="#">JAVA李老师</a></li>
-            </ul>
-            <a class="mod" href="#">修改性别</a>
+    </div>
+    <div class="good w">
+        <h3>室友推荐</h3>
+        <ul class="goods">
+            <li><a href="#">张 宇</a></li>
+            <li><a href="#">卢本伟</a></li>
+            <li><a href="#">大司马</a></li>
+            <li><a href="#">汤 帅</a></li>
+            <li><a href="#">永乐大帝</a></li>
+            <li><a href="#">JAVA李老师</a></li>
+        </ul>
+        <a class="mod" href="#">修改性别</a>
+    </div>
+    <div class="box w">
+        <div class="box-hd">
+            <h3>精品推荐</h3>
+            <a href="#">查看全部</a>
         </div>
-        <div class="box w">
-            <div class="box-hd">
-                <h3>精品推荐</h3>
-                <a href="#">查看全部</a>
-            </div>
-        </div>
-        <div class="box-bd w clearfix">
-            <ul>
-                <li><a href="#">
+    </div>
+    <div class="box-bd w clearfix">
+        <ul>
+            <li>
                     <img src="images/math-book0.jpg" />
                     <h4>3天低等数学速成班，摸鱼无烦恼</h4>
                     <div class="info"><span>初级</span> · 3人正在学习</div>
-                </a>
-                </li>
-                <li><a href="#"></a><img src="images/math-book1.jpg" />
-                    <h4>5天低等数学冲刺班，挂科无烦恼</h4>
-                    <div class="info"><span>初级</span> · 1人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/yuwen0.png" />
-                    <h4>如何阴阳怪气室友，remake经验分享</h4>
-                    <div class="info"><span>中级</span> · 15人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/yuwen1.jpg" />
-                    <h4>毛🐏先生的说话之道，了解施乐公司</h4>
-                    <div class="info"><span>高级</span> · 112人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/yuwen2.jpg" />
-                    <h4>10天教你成为李平老师口中的人渣</h4>
-                    <div class="info"><span>中级</span> · 30人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/dili0.jpg" />
-                    <h4>合工大=复旦？浅谈地理位置对大学发展的影响</h4>
-                    <div class="info"><span>高级</span> · 55人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/math-book2.jpg" />
-                    <h4>☀两年高等数学突破班，马力加强版</h4>
-                    <div class="info"><span>中级</span> ·73人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/english0.jpg" />
-                    <h4>Mou moumou雅思1.0经验分享，附赠学习规划</h4>
-                    <div class="info"><span>初级</span> · 0人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/wuli0.jpg" />
-                    <h4>疫情不给出校门？教你利用物理规律翻墙</h4>
-                    <div class="info"><span>高级</span> · 3458人正在学习</div></a>
-                </li><a href="#"></a><li><img src="images/shengwu0.jpg" />
-                    <h4>垃圾的产生过程及处理方法，现场教学班</h4>
-                    <div class="info"><span>初级</span> · 37人正在学习</div></a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer" >
-            <div class="w">
-                <div class="copyright">
-                    <img src="images/logo.png" alt="logo">
-                    <p>©2021 Baidu<br/>  
-                        (京)-经营性-2017-0020 京公网安备11000002000001号 京ICP证030173号</p>
-                    <a href="#">下载APP</a>
+            </li>
+            <li><img src="images/math-book1.jpg" />
+                <h4>5天低等数学冲刺班，挂科无烦恼</h4>
+                <div class="info"><span>初级</span> · 1人正在学习</div>
+            </li>
+            <li><img src="images/yuwen0.png" />
+                <h4>如何阴阳怪气室友，remake经验分享</h4>
+                <div class="info"><span>中级</span> · 15人正在学习</div>
+            </li>
+            <li><img src="images/yuwen1.jpg" />
+                <div class="rank2">
+                    <span class="top">TOP</span>
+                    <span class="number">02</span>
                 </div>
-                <div class="links">
-                    <div class="col">
-                        <span>关于本网站</span>
-                        <ul>
-                            <a target="_blank" href="//www.bilibili.com/blackboard/aboutUs.html">关于我们</a>
-                            <a target="_blank" href="//www.bilibili.com/blackboard/contact.html">联系我们</a>
-                            <a target="_blank" href="//www.bilibili.com/blackboard/join.html">加入我们</a>
-                        </ul>
-                    </div>
-                    <div class="col">
-                        <span>用户指南</span>
-                        <ul>
-                            <a target="_blank" href="https://www.bilibili.com/protocal/licence.html">用户协议</a>
-                            <a target="_blank" href="//www.bilibili.com/v/copyright/intro/">
-                                侵权申诉
-                              </a>
-                              <a target="_blank" href="https://www.bilibili.com/blackboard/privacy-pc.html">隐私政策</a>
-                        </ul>
-                    </div>
-                    <div class="col">
-                        <span>合作伙伴</span>
-                        <ul>
-                            <a target="_blank" href="//www.bilibili.com/blackboard/friends-links.html">友情链接</a>
-                            <a target="_blank" href="//www.bilibili.com/blackboard/activity-S1jfy69Jz.html">
-                                名人堂
-                              </a>
-                              <a target="_blank" href="//e.bilibili.com/">广告合作</a>
-                        </ul>
-                    </div>
+                <h4>毛🐏先生的说话之道，了解施乐公司</h4>
+                <div class="info"><span>高级</span> · 112人正在学习</div>
+            </li>
+            <li><img src="images/yuwen2.jpg" />
+                <h4>10天教你成为李平老师口中的人渣</h4>
+                <div class="info"><span>中级</span> · 30人正在学习</div>
+            </li>
+            <li><img src="images/dili0.jpg" />
+                <h4>合工大=复旦？浅谈地理位置对大学发展的影响</h4>
+                <div class="info"><span>高级</span> · 55人正在学习</div>
+            </li>
+            <li><img src="images/math-book2.jpg" />
+                <h4>☀两年高等数学突破班，马力加强版</h4>
+                <div class="info"><span>中级</span> ·73人正在学习</div>
+            </li>
+            <li><img src="images/english0.jpg" />
+                <h4>Mou moumou雅思1.0经验分享，附赠学习规划</h4>
+                <div class="info"><span>初级</span> · 0人正在学习</div>
+            </li>
+            <li><img src="images/wuli0.jpg" />
+                <div class="rank1">
+                    <span class="top">TOP</span>
+                    <span class="number">01</span>
+                </div>
+                <h4>疫情不给出校门？教你利用物理规律翻墙</h4>
+                <div class="info"><span>高级</span> · 3458人正在学习</div>
+            </li>
+            <li><img src="images/shengwu0.jpg" />
+                <h4>垃圾的产生过程及处理方法，现场教学班</h4>
+                <div class="info"><span>初级</span> · 37人正在学习</div>
+            </li>
+        </ul>
+    </div>
+    <div class="footer">
+        <div class="w">
+            <div class="copyright">
+                <img src="images/logo.png" alt="logo">
+                <p>©2021 Baidu<br />
+                    (京)-经营性-2017-0020 京公网安备11000002000001号 京ICP证030173号</p>
+                <a href="#">下载APP</a>
+            </div>
+            <div class="links">
+                <div class="col">
+                    <span>关于本网站</span>
+                    <ul>
+                        <a target="_blank" href="//www.bilibili.com/blackboard/aboutUs.html">关于我们</a>
+                        <a target="_blank" href="//www.bilibili.com/blackboard/contact.html">联系我们</a>
+                        <a target="_blank" href="//www.bilibili.com/blackboard/join.html">加入我们</a>
+                    </ul>
+                </div>
+                <div class="col">
+                    <span>用户指南</span>
+                    <ul>
+                        <a target="_blank" href="https://www.bilibili.com/protocal/licence.html">用户协议</a>
+                        <a target="_blank" href="//www.bilibili.com/v/copyright/intro/">
+                            侵权申诉
+                        </a>
+                        <a target="_blank" href="https://www.bilibili.com/blackboard/privacy-pc.html">隐私政策</a>
+                    </ul>
+                </div>
+                <div class="col">
+                    <span>合作伙伴</span>
+                    <ul>
+                        <a target="_blank" href="//www.bilibili.com/blackboard/friends-links.html">友情链接</a>
+                        <a target="_blank" href="//www.bilibili.com/blackboard/activity-S1jfy69Jz.html">
+                            名人堂
+                        </a>
+                        <a target="_blank" href="//e.bilibili.com/">广告合作</a>
+                    </ul>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
