更新了readme，增加了遮罩

--- a/code/position-淘宝轮播图.html
+++ b/code/position-淘宝轮播图.html
@@ -48,6 +48,7 @@
         }
 
         .ad-box img {
+            /* 这里将img转化为block，避免了div或a内放img导致的多出5px的问题 */
             display: block;
             border-radius: 12px;
         }
