--- a/code/compre-品优购/index.html
+++ b/code/compre-品优购/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>品优购主页</title>
-    <link rel="stylesheet" href="css/base.css"/>
-    <link rel="stylesheet" href="css/common.css"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/iconfont.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta name="description" content="品优购 - 亚洲较大的网上交易平台，提供各类服饰、美容、家居、数码、话费/点卡充值… 数亿优质商品，
     同时提供担保交易(先收货后付款)等安全交易保障服务，并由商家提供退货承诺、破损补寄等消费者保障服务，让你安心享受网上购物乐趣！">
     <meta name="keywords" content="淘宝,掏宝,网上购物,C2C,在线交易,交易市场,网上交易,交易市场,网上买,网上卖,购物网站,团购,网上贸易,安全购物,电子商务,放心买,供应,买卖信息
     ,网店,一口价,拍卖,网上开店,网络购物,打折,免费开店,网购,频道,店铺">
 </head>
+
 <body>
-    <!-- 快捷导航模块 -->
+    <!-- 快捷导航模块 start -->
     <div class="shortcut">
         <div class="w">
             <div class="fl">
@@ -26,22 +29,48 @@
                     </li>
                 </ul>
             </div>
-            <div class="fr"><ul>
-                <li>我的订单</li>
-                <li></li>
-                <li>我的品优购</li>
-                <li></li>
-                <li>品优购会员</li>
-                <li></li>
-                <li>企业采购</li>
-                <li></li>
-                <li>关注品优购</li>
-                <li></li>
-                <li>客户服务</li>
-                <li></li>
-                <li>网站导航</li>
-            </ul></div>
+            <div class="fr">
+                <ul>
+                    <li>我的订单</li>
+                    <li></li>
+                    <li class="arrow-icon">我的品优购</li>
+                    <li></li>
+                    <li>品优购会员</li>
+                    <li></li>
+                    <li>企业采购</li>
+                    <li></li>
+                    <li class="arrow-icon">关注品优购</li>
+                    <li></li>
+                    <li class="arrow-icon">客户服务</li>
+                    <li></li>
+                    <li class="arrow-icon">网站导航</li>
+                </ul>
+            </div>
         </div>
     </div>
+    <!-- 快捷导航模块 end -->
+    <!-- header头部模块制作 start-->
+    <header class="header w">
+        <div class="logo" title="品优购商城">
+            <h1><a href="index.html">品优购商城</a></h1>
+        </div>
+        <div class="search">
+            <input type="search" placeholder="C++书籍" />
+            <button>搜索</button>
+        </div>
+        <div class="hotwords">
+            <a href="#" class="style_red">一元购首发</a>
+            <a href="#">亿元优惠</a>
+            <a href="#">9.9团购</a>
+            <a href="#" class="style_red">满99减1</a>
+            <a href="#">办公工具</a>
+            <a href="#">通信电脑</a>
+        </div>
+        <div class="shopcar">
+            购物车
+        </div>
+    </header>
+    <!-- header头部模块制作 end-->
 </body>
+
 </html>
