完成了导航栏nav

--- a/code/compre-品优购/index.html
+++ b/code/compre-品优购/index.html
@@ -68,6 +68,7 @@
         </div>
         <div class="shopcar">
             购物车
+            <i class="count">80</i>
         </div>
     </header>
     <!-- header头部模块制作 end-->
