--- a/code/compre-品优购/index.html
+++ b/code/compre-品优购/index.html
@@ -72,6 +72,20 @@
         </div>
     </header>
     <!-- header头部模块制作 end-->
+    <div class="nav">
+        <div class="w">
+            <div class="dropdown">
+                <div class="dt">全部商品分类</div>
+                <div class="dd">
+                    <ul>
+                        <li><a href="#">家用电器</a></li>
+                        <li><a href="#">手机</a>、<a href="#">数码</a>、 <a href="#">通信</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="navitems">navitems</div>
+        </div>
+    </div>
 </body>
 
 </html>
