--- a/code/Learn-CSS!/Box Model/main.html
+++ b/code/Learn-CSS!/Box Model/main.html
@@ -13,9 +13,15 @@
         padding: 0;
     }
 
+    *::selection {
+        background-color: black;
+        color: white;
+    }
+
     a {
         text-decoration: none;
     }
+
     .toggle_decor {
         display: block;
         height: 24px;
@@ -23,10 +29,11 @@
         background-color: rgb(79, 111, 255);
         border-radius: 12px;
     }
+
     .toggle_decor:checked {
         background-color: rgb(136, 136, 136);
     }
-</style>    
+</style>
 
 <body>
     <div class="header">
@@ -46,7 +53,7 @@
         <p>Turn on instrinsic sizing:</p>
         <div class="toggle_decor">
             <input type="checkbox">
-        </div>      
+        </div>
         <div class="footer"></div>
 </body>
 
